# qonto-skill-test

./: .envrc  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/: kafka_to_dwh.py  models.py  options.py
scripts/: create-topic.sh  events.json
sql/: create_table.sql  get-last-companies-version.sql
tests/: test_parse_kafka.py  test_pipeline.py
